Adjust layout and styles to prevent footer and main content overlap

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -65,6 +65,7 @@ main {
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 1020;
 }
 
 .container {
@@ -158,4 +159,3 @@ main {
     max-width: 300px;
   }
 }
-
